--- a/templates/new_topic.html
+++ b/templates/new_topic.html
@@ -13,16 +13,9 @@
 {%endblock%}
 
 {%block content%}
-<form method="post">
+<form method="post" novalidate>
     {% csrf_token %}
-    <div class="form-group">
-        <label for="id_subject">subject</label>
-        <input id="id_subject" class="form-control" type="text" name="subject">
-    </div>
-    <div class="form-group">
-        <label for="id_message">message</label>
-        <textarea name="message" class="form-control" id="id_message" rows="5"></textarea>
-    </div>
+    {{form.as_p}}
     <button type="submit" class="btn btn-success">Add</button>
 </form>
 {%endblock%}
