--- a/templates/base.html
+++ b/templates/base.html
@@ -19,12 +19,30 @@
                 aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="mainMenu">
+                {%if user.is_authenticated%}
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Welcome {{ user.username }}</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            {{ user.username }}
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
+                            <a class="dropdown-item" href="#">My account</a>
+                            <a class="dropdown-item" href="#">Change password</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
+                        </div>
                     </li>
                 </ul>
+                {%else%}
+                <form class="form-inline ml-auto">
+                    <a href="{% url 'login' %}" class="btn btn-outline-secondary">login</a>
+                    <a href="{% url 'signup' %}" class="btn btn-primary ml-2">SignUp</a>
+                </form>
+                {%endif%}
+
             </div>
         </div>
     </nav>
@@ -37,6 +55,9 @@
         {%endblock%}
     </div>
     {%endblock%}
+    <script src="{%static 'js/jquery-3.6.1.min.js'%}"></script>
+    <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
+    <script src="{%static 'js/bootstrap.min.js'%}"></script>
 </body>
 
 </html>
