--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
-{%load static%}
+{% load static%}
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{%static 'css/bootstrap.min.css'%}">
-    <title>{%block title%}{%endblock%}</title>
+    {% block stylesheet %}{% endblock %}
+
 </head>
 
 <body>
@@ -30,7 +29,7 @@
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
                             <a class="dropdown-item" href="#">My account</a>
-                            <a class="dropdown-item" href="#">Change password</a>
+                            <a class="dropdown-item" href="{%url 'password_change'%}">Change password</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
                         </div>
@@ -38,8 +37,8 @@
                 </ul>
                 {%else%}
                 <form class="form-inline ml-auto">
-                    <a href="{% url 'login' %}" class="btn btn-outline-secondary">login</a>
-                    <a href="{% url 'signup' %}" class="btn btn-primary ml-2">SignUp</a>
+                    <a href="{%url 'login'%}" class="btn btn-outline-secondary">login</a>
+                    <a href="{%url 'signup'%}" class="btn btn-primary ml-2">Signup</a>
                 </form>
                 {%endif%}
 
@@ -48,16 +47,19 @@
     </nav>
     <div class="container">
         <ol class="breadcrumb my-4">
-            {%block breadcrumb%}
-            {%endblock%}
+            {% block breadcrumb %}
+            {% endblock %}
         </ol>
-        {%block content%}
-        {%endblock%}
+
+        {% block content %}
+        {% endblock %}
+
     </div>
-    {%endblock%}
-    <script src="{%static 'js/jquery-3.6.1.min.js'%}"></script>
-    <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
+    {%endblock body%}
+    <script src="{%static 'js/jquery-3.4.1.min.js'%}"></script>
+    <script src="{%static 'js/popper.min.js'%}"></script>
     <script src="{%static 'js/bootstrap.min.js'%}"></script>
+
 </body>
 
 </html>
