--- a/templates/topics.html
+++ b/templates/topics.html
@@ -29,7 +29,7 @@
             </td>
             <td>{{topic.created_by.username}}</td>
             <td>{{topic.comments}}</td>
-            <td>0</td>
+            <td>{{topic.views}}</td>
             <td>{{topic.created_dt}}</td>
         </tr>
         {%endfor%}
