--- a/templates/topics.html
+++ b/templates/topics.html
@@ -35,4 +35,34 @@
         {%endfor%}
     </tbody>
 </table>
+<ul class="pagination">
+    {%if topics.has_previous%}
+    <li class="page-item">
+        <a class="page-link" href="?page{{topics.previous_page_number}}">Previous</a>
+    </li>
+    {%endif%}
+    {%for page_num in topics.paginator.page_range%}
+    {%if topics.number == page.num%}
+    <li class="page-item active">
+        {{page_num}}
+        <span>(current)</span>
+    </li>
+    {%else%}
+    <li class="page-item">
+        {{page_num}}
+        <a class="page-link" href="?page{{page_num}}">{{page_num}}</a>
+    </li>
+    {%endif%}
+    {%endfor%}
+
+    {%if topics.has_next%}
+    <li class="page-item">
+        <a class="page-link" href="?page{{topics.next_page_number}}">Next</a>
+    </li>
+    {%else%}
+    <li class="page-item disabled">
+        <span>Next</span>
+    </li>
+    {%endif%}
+</ul>
 {%endblock%}
